// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoydu ftQsdg"
>
  <li
    className="sc-fzoJMP laisAY"
    onClick={[Function]}
  >
    <span
      className="sc-fzoant kDalZE"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoJMP laisAY"
    onClick={[Function]}
  >
    <span
      className="sc-fzoant kDalZE"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoJMP laisAY"
    onClick={[Function]}
  >
    <span
      className="sc-fzoant kDalZE"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoydu ftQsdg"
>
  <li
    className="sc-fzoJMP iDuVbA"
    onClick={[Function]}
  >
    <span
      className="sc-fzoant kDalZE"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoJMP iDuVbA"
    onClick={[Function]}
  >
    <span
      className="sc-fzoant kDalZE"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoJMP iDuVbA"
    onClick={[Function]}
  >
    <span
      className="sc-fzoant kDalZE"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
